--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,18 @@
 
     <TimePicker
         android:id="@+id/timePicker"
-        android:layout_width="match_parent"
-        android:layout_height="411dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="161dp" />
+        android:layout_width="364dp"
+        android:layout_height="473dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="28dp" />
 
     <TextClock
         android:id="@+id/textClock"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp" />
-
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginBottom="651dp" />
 </RelativeLayout>
